--- a/index.html
+++ b/index.html
@@ -1,205 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FEMME Saree Store</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FEMME Saree Store</title>
 
-<style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-body {
-  background: #fff0f5;
-  color: #3a1f2b;
-}
+    body {
+      background: #fff0f5;
+      color: #3a1f2b;
+    }
 
-/* HEADER */
-header {
-  min-height: 80px;
-  background: linear-gradient(90deg, #ffffff, #ffe4ec);
-  border-bottom: 1px solid #f2b6c6;
-  padding: 14px 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
+    header {
+      min-height: 80px;
+      background: linear-gradient(90deg, #ffffff, #ffe4ec);
+      border-bottom: 1px solid #f2b6c6;
+      padding: 14px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
 
-.logo img {
-  height: 60px;
-  display: block;
-}
+    .logo img {
+      height: 60px;
+      object-fit: contain;
+      display: block;
+    }
 
-.logo-text {
-  font-size: 26px;
-  font-weight: bold;
-  color: #c2185b;
-  letter-spacing: 2px;
-  display: none;
-}
+    .logo-text {
+      font-size: 26px;
+      font-weight: bold;
+      color: #c2185b;
+      letter-spacing: 2px;
+      display: none;
+    }
 
-nav a {
-  margin: 0 14px;
-  text-decoration: none;
-  color: #c2185b;
-  font-weight: 600;
-  font-size: 14px;
-}
+    nav a {
+      margin: 0 14px;
+      text-decoration: none;
+      color: #c2185b;
+      font-weight: 600;
+      font-size: 14px;
+    }
 
-.search {
-  flex: 1;
-  margin: 0 30px;
-}
+    .search {
+      flex: 1;
+      margin: 0 30px;
+    }
 
-.search input {
-  width: 100%;
-  padding: 10px 14px;
-  border-radius: 20px;
-  border: 1px solid #f2b6c6;
-}
+    .search input {
+      width: 100%;
+      padding: 10px 14px;
+      border-radius: 20px;
+      border: 1px solid #f2b6c6;
+    }
 
-/* HERO */
-.hero {
-  background: linear-gradient(rgba(255,182,193,0.6), rgba(255,182,193,0.6)),
-    url('femi.png') center / cover no-repeat;
-  height: 420px;
-  display: flex;
-  align-items: center;
-  padding: 40px;
-  color: #fff;
-}
+    .hero {
+      background: linear-gradient(rgba(255,182,193,0.6), rgba(255,182,193,0.6)), url('Femme_20251031_232516_0000-1.png?auto=format&fit=crop&w=1600&q=80') center / cover no-repeat;
+      height: 420px;
+      display: flex;
+      align-items: center;
+      padding: 40px;
+      color: #ffffff;
+    }
 
-.hero h1 {
-  font-size: 48px;
-  background: rgba(194, 24, 91, 0.7);
-  padding: 22px 28px;
-  border-radius: 6px;
-}
+    .hero h1 {
+      font-size: 48px;
+      background: rgba(194, 24, 91, 0.7);
+      padding: 22px 28px;
+      border-radius: 6px;
+    }
 
-/* GRID */
-.section {
-  padding: 40px;
-}
+    .section {
+      padding: 40px;
+    }
 
-.section h2 {
-  margin-bottom: 20px;
-  font-size: 26px;
-  color: #c2185b;
-}
+    .section h2 {
+      margin-bottom: 20px;
+      font-size: 26px;
+      color: #c2185b;
+    }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-  gap: 20px;
-}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 20px;
+    }
 
-.card {
-  background: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 8px 24px rgba(194, 24, 91, 0.15);
-  position: relative;
-}
+    .card {
+      background: #ffffff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 8px 24px rgba(194, 24, 91, 0.15);
+      transition: transform 0.25s, box-shadow 0.25s;
+    }
 
-.card img {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-}
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 12px 30px rgba(194, 24, 91, 0.25);
+    }
 
-.card .info {
-  padding: 12px;
-}
+    .card img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
 
-/* + BUTTON */
-.plus-btn {
-  position: absolute;
-  bottom: 12px;
-  right: 12px;
-  width: 36px;
-  height: 36px;
-  background: #c2185b;
-  color: #fff;
-  font-size: 22px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  opacity: 0;
-  transform: scale(0.8);
-  transition: 0.25s ease;
-}
+    .card .info {
+      padding: 12px;
+    }
 
-.card:hover .plus-btn {
-  opacity: 1;
-  transform: scale(1);
-}
+    .card .info h3 {
+      font-size: 15px;
+      margin-bottom: 6px;
+    }
 
-.plus-btn.animate {
-  animation: pop 0.3s ease;
-}
+    .card .info p {
+      font-size: 14px;
+      font-weight: bold;
+    }
 
-@keyframes pop {
-  50% { transform: scale(1.3); }
-}
-
-/* MODAL */
-.modal-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.6);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
-
-.modal-box {
-  background: #fff;
-  width: 320px;
-  padding: 20px;
-  border-radius: 16px;
-  text-align: center;
-  position: relative;
-}
-
-.modal-box img {
-  width: 100%;
-  border-radius: 12px;
-}
-
-.close-btn {
-  position: absolute;
-  right: 14px;
-  top: 10px;
-  font-size: 22px;
-  cursor: pointer;
-}
-
-footer {
-  background: linear-gradient(90deg, #c2185b, #f06292);
-  color: #fff;
-  padding: 40px;
-  text-align: center;
-  margin-top: 60px;
-}
-</style>
+    footer {
+      background: linear-gradient(90deg, #c2185b, #f06292);
+      color: #ffffff;
+      padding: 40px;
+      text-align: center;
+      margin-top: 60px;
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
   <div class="logo">
-    <img src="Femme_20251031_232516_0000.pdf"
-      onerror="this.style.display='none'; this.nextElementSibling.style.display='block'">
+    <img src="femi.png" alt="FEMME Logo" onload="this.nextElementSibling.style.display='none'" onerror="this.style.display='none'; this.nextElementSibling.style.display='block'">
     <div class="logo-text">FEMME</div>
   </div>
 
@@ -213,6 +158,12 @@ footer {
   <div class="search">
     <input type="text" placeholder="Search for sarees, brands & more">
   </div>
+
+  <nav>
+    <a href="#">Profile</a>
+    <a href="#">Wishlist</a>
+    <a href="#">Bag</a>
+  </nav>
 </header>
 
 <section class="hero">
@@ -222,46 +173,68 @@ footer {
 <section class="section">
   <h2>Trending Sarees</h2>
   <div class="grid">
-    <div class="card"><img src="WhatsApp Image 2026-01-08 at 10.41.32 PM.jpeg"><div class="info"><h3>Banarasi Silk</h3><p>₹4,999</p></div></div>
-    <div class="card"><img src="WhatsApp Image 2026-01-08 at 10.41.35 PM.jpeg"><div class="info"><h3>Designer Saree</h3><p>₹3,499</p></div></div>
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.41.32 PM.jpeg" alt="Banarasi Silk Saree">
+      <div class="info">
+        <h3>Banarasi Silk Saree</h3>
+        <p>₹4,999</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.41.35 PM.jpeg" alt="Designer Saree">
+      <div class="info">
+        <h3>Designer Party Saree</h3>
+        <p>₹3,499</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.41.38 PM.jpeg" alt="Cotton Saree">
+      <div class="info">
+        <h3>Cotton Daily Wear</h3>
+        <p>₹1,299</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.42.28 PM.jpeg" alt="Wedding Saree">
+      <div class="info">
+        <h3>Wedding Collection</h3>
+        <p>₹7,999</p>
+      </div>
+    </div>
   </div>
 </section>
 
-<footer>© 2026 FEMME Saree</footer>
+<section class="section">
+  <h2>New Arrivals</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.42.31 PM.jpeg" alt="Pastel Saree">
+      <div class="info"><h3>Pastel Saree</h3><p>₹2,499</p></div>
+    </div>
 
-<!-- MODAL -->
-<div class="modal-overlay" id="quickView">
-  <div class="modal-box">
-    <span class="close-btn" onclick="closeModal()">×</span>
-    <img id="modalImg">
-    <h3>Designer Saree</h3>
-    <p>₹2,999</p>
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.42.35 PM.jpeg" alt="Festive Saree">
+      <div class="info"><h3>Festive Wear</h3><p>₹3,999</p></div>
+    </div>
+
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.42.47 PM.jpeg" alt="Classic Silk Saree">
+      <div class="info"><h3>Classic Silk</h3><p>₹5,499</p></div>
+    </div>
+
+    <div class="card">
+      <img src="WhatsApp Image 2026-01-08 at 10.43.07 PM.jpeg" alt="Modern Saree">
+      <div class="info"><h3>Modern Drape</h3><p>₹2,999</p></div>
+    </div>
   </div>
-</div>
+</section>
 
-<script>
-const modal = document.getElementById('quickView');
-const modalImg = document.getElementById('modalImg');
-
-document.querySelectorAll('.card').forEach(card => {
-  const plus = document.createElement('div');
-  plus.className = 'plus-btn';
-  plus.textContent = '+';
-
-  plus.onclick = e => {
-    e.stopPropagation();
-    plus.classList.add('animate');
-    modalImg.src = card.querySelector('img').src;
-    modal.style.display = 'flex';
-  };
-
-  card.appendChild(plus);
-});
-
-function closeModal() {
-  modal.style.display = 'none';
-}
-</script>
+<footer>
+  <p>© 2026 FEMME Saree.@side_chick</p>
+</footer>
 
 </body>
 </html>
